@@ -1,5 +1,11 @@
 2002-01-15  Darin Adler  <darin@bentspoon.com>
 
+	* src/Makefile.am:
+	* src/nautilus-profiler.c:
+	Do an ifdef in the profiler code rather than in the makefile.
+
+2002-01-15  Darin Adler  <darin@bentspoon.com>
+
 	* NEWS: Prepare for 1.1.1 release.
 	* TODO: A few things got done.
 
